# NoiseFrog

./: .gitmodules  LICENSE  meson.build
src/: meson.build
src/noisefrog/: noisefrog.h
src/noisefrog-cli/: main.cpp  meson.build
src/noisefrog-ladspa/: ladspa_harness.h  main.cpp  meson.build
